[package]
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
description = "SPL-Token Command-line Utility"
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "spl-transfer-hook-cli"
repository = "https://github.com/solana-labs/solana-program-library"
version = "0.1.1"

[dependencies]
clap = { version = "3", features = ["cargo"] }
futures-util = "0.3.30"
solana-clap-v3-utils = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-cli-config = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-client = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-logger = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-remote-wallet = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
solana-sdk = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
spl-transfer-hook-interface = { version = "0.5", path = "../interface" }
spl-tlv-account-resolution = { version = "0.5.2" , path = "../../../libraries/tlv-account-resolution", features = ["serde-traits"] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.32"

[dev-dependencies]
solana-test-validator = { git = "https://github.com/Inon123/solana.git", rev ="abb7d30fe97103c71958fa5a8378dc3ab93c0996"}
spl-token-2022 = { version = "2.0", path = "../../program-2022", features = ["no-entrypoint"] }
spl-token-client = { version = "0.8", path = "../../client" }

[[bin]]
name = "spl-transfer-hook"
path = "src/main.rs"
